RESOLVED FIXED105575
[JSC] SerializedScriptValue does not serialize non-index properties of arrays
https://bugs.webkit.org/show_bug.cgi?id=105575
Summary [JSC] SerializedScriptValue does not serialize non-index properties of arrays
Michael Pruett
Reported 2012-12-20 14:01:35 PST
When serializing arrays, the JSC SerializedScriptValue ignores non-indexed properties of arrays. This behavior is incorrect according to the HTML5 specification's structured cloning algorithm: "Properties of Array objects are not treated any differently than those of other Objects. In particular, this means that non-index properties of arrays are copied as well." http://www.w3.org/TR/html5/infrastructure.html#internal-structured-cloning-algorithm
Attachments
Patch (40.67 KB, patch)
2012-12-24 09:58 PST, Michael Pruett
no flags
Michael Pruett
Comment 1 2012-12-24 09:58:25 PST
WebKit Review Bot
Comment 2 2013-01-07 11:05:06 PST
Comment on attachment 180677 [details] Patch Clearing flags on attachment: 180677 Committed r138964: <http://trac.webkit.org/changeset/138964>
WebKit Review Bot
Comment 3 2013-01-07 11:05:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.