[JSC] Copy non-index properties of arrays in SerializedScriptValue https://bugs.webkit.org/show_bug.cgi?id=105575

Patch by Michael Pruett <michael@68k.org> on 2013-01-07
Reviewed by Oliver Hunt.

The structured cloning algorithm requires copying all properties of
array objects, including non-index properties.

Source/WebCore:

Tests: fast/storage/serialized-script-value.html
       storage/indexeddb/structured-clone.html

* bindings/js/SerializedScriptValue.cpp:
(WebCore):
(WebCore::CloneSerializer::serialize):
(WebCore::CloneDeserializer::putProperty):
(WebCore::CloneDeserializer::deserialize):

LayoutTests:

* fast/storage/resources/serialized-script-value.js:
* fast/storage/serialized-script-value-expected.txt:
* fast/storage/serialized-script-value.html:
* platform/chromium/fast/storage/serialized-script-value-expected.txt:
* platform/chromium/fast/storage/serialized-script-value.html:

Canonical link: https://commits.webkit.org/124427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138964 268f45cc-cd09-0410-ab3c-d52691b4dbfc